samples/_failures_safe/1761040690_47395a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8d6dcf6.c: In function ‘main’:
./samples/SAFE/__tmp_b8d6dcf6.c:137:36: error: expected ‘;’ at end of input
  137 |         cleanup_compression_context
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_b8d6dcf6.c:137:9: error: expected declaration or statement at end of input
  137 |         cleanup_compression_context
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b8d6dcf6.c:137:9: error: expected declaration or statement at end of input
